UI fixes (#2)
* fix: fix typo

* fix: add principle card animation

* fix: add tag transition

* fix: add social-media hover effects

* fix: add courses transition; extract icons

* fix: add event card transition

* fix: add contribute transition

* fix: add navbar transition

* fix: add hover media query everywhere; smooth scrolling

* fix: horizontal scroll

--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -17,3 +17,9 @@
     @content;
   }
 }
+
+@mixin media-hover {
+  @media (hover: hover) {
+    @content;
+  }
+}
