--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,4 +1,5 @@
 @import '../../mixins';
+@import '../../placeholders';
 
 .navbar {
   width: 100%;
@@ -16,10 +17,6 @@
 
   &.gray {
     background-color: rgba(95, 44, 20, 0.1);
-    &:hover {
-      box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.14);
-      background-color: rgba(95, 44, 20, 0.2);
-    }
   }
 
   &.none {
@@ -31,7 +28,15 @@
     border-bottom-right-radius: 0px;
     box-shadow: rgba(0, 0, 0, 0.082) 0px 1.02604px 8.06943px 0px;
     opacity: 1;
-    &:hover {
+  }
+
+  @include media-hover {
+    &.gray:hover{
+      box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.14);
+      background-color: rgba(95, 44, 20, 0.2);
+    }
+
+    &.white:hover {
       box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.14);
     }
   }
@@ -86,21 +91,26 @@
 }
 
 .menu-item {
+  position: relative;
   width: 120px;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 14px;
   cursor: pointer;
-  &:hover {
-    border-color: #000000;
-    border-style: solid;
-    border-top-width: 0px;
-    border-bottom-width: 2px;
-    border-left-width: 0px;
-    border-right-width: 0px;
+  
+  &::after {
+    transition: transform .3s ease-in-out;
+    content: '';
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-color: #000000;
+    transform: scaleX(0);
   }
-
+  
   & .label {
     white-space: nowrap;
     font-weight: 500;
@@ -111,13 +121,16 @@
     letter-spacing: 0em;
     line-height: 20px;
     text-align: center;
-    @include media-tablet {
-      text-align: left;
+  }
+
+  @include media-hover {
+    &:hover::after {  
+      transform: scaleX(1);
     }
-    &:hover {
-      font-weight: 600;
+
+    &:hover .label {
       font-family: 'Inter-SemiBold', 'Inter', sans-serif;
-      color: #000000;
+      font-weight: 600;
     }
   }
 }
@@ -130,12 +143,14 @@
   position: relative;
   border-radius: 0px 0px 0px 0px;
   cursor: pointer;
-  transition: 0.4s;
-  &:hover {
-    .top,
-    .mid,
-    .bottom {
-      height: 3px;
+  
+  @include media-hover {
+    &:hover {
+      .top,
+      .mid,
+      .bottom {
+        height: 3px;
+      }
     }
   }
 }
@@ -154,6 +169,7 @@
   overflow: hidden;
   position: absolute;
   border-radius: 0px 0px 0px 0px;
+  transition: transform 0.4s ease-in-out;
 }
 
 .top {
@@ -193,6 +209,14 @@
   }
   .menu.open .menu-item {
     display: block;
+
+    & .label {
+      text-align: left;
+    }
+
+    &::after {
+      transform-origin: center left;
+    }
   }
   .burger {
     display: block;
